# Kotahi

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: oobe_country_spinner_text_color.xml  oobe_tos_text_color_link.xml
app/src/main/res/color-night/: oobe_tos_text_color_link.xml
app/src/main/res/drawable/: ic_oobe_ic_privacy.xml  oobe_button_background.xml  oobe_country_spinner_arrow.xml  oobe_country_spinner_background.xml  oobe_sub_button_background.xml  widget_fab_background.xml
app/src/main/res/layout/: activity_oobe.xml  fragment_oobe_code_confirm.xml  fragment_oobe_config.xml  fragment_oobe_intro.xml  view_oobe_country_spinner_dialog.xml  view_oobe_country_spinner_list_item.xml  view_oobe_country_spinner_list_no_item.xml  view_oobe_country_spinner_view.xml  view_oobe_number_list_item.xml  view_oobe_tips_item.xml
app/src/main/res/navigation/: oobe_nav_graph.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml  (+2 more)
app/src/main/res/values-night/: colors.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_openssl-darwin.sh  build_openssl-linux.sh  build_openssl.sh  prepare_sources-darwin.sh  prepare_sources-linux.sh  prepare_sources.sh
tdlib/: build.gradle  build.gradle.kts  consumer-rules.pro
tdlib/jni/: CMakeLists.txt
utils/animation/: build.gradle  build.gradle.kts
utils/oneui/: build.gradle  build.gradle.kts
utils/presetimage/: build.gradle  build.gradle.kts
utils/stub/: build.gradle  build.gradle.kts
(+151 files in other folders)
